--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ endif()
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/cpp")
 add_subdirectory("${PROJECT_SOURCE_DIR}/cython")
+add_subdirectory("${PROJECT_SOURCE_DIR}/tests")
