--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,11 +3,11 @@ project(arv-tests)
 
 enable_testing()
 
-add_test(testarv.py COMMAND
+add_test(testarvcy.py COMMAND
   ${PYTHON_EXECUTABLE} -m unittest discover ${CMAKE_CURRENT_BINARY_DIR} -v)
 
 configure_file(fake_genome.txt fake_genome.txt COPYONLY)
-configure_file(testarv.py testarv.py COPYONLY)
+configure_file(testarvcy.py testarvcy.py COPYONLY)
 
-set_tests_properties(testarv.py PROPERTIES
+set_tests_properties(testarvcy.py PROPERTIES
   ENVIRONMENT "PYTHONPATH=${CMAKE_CURRENT_BINARY_DIR}/../cython")
