--- a/cython/CMakeLists.txt
+++ b/cython/CMakeLists.txt
@@ -9,10 +9,12 @@ set_source_files_properties(${PROJECT_SOURCE_DIR}/_arv.pyx
 
 cython_add_module(_arv _arv.pyx)
 
-set(libs PRIVATE arv-cpp)
+set(libs PRIVATE arv)
 
 if (NOT APPLE)
   list(APPEND libs PRIVATE ${PYTHON_LIBRARY})
 endif()
 
 target_link_libraries(_arv ${libs})
+
+install(TARGETS _arv LIBRARY DESTINATION lib/arv)
