Adds Python 3 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CXX_STANDARD 11)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 # Allow users to select which Python version to use
-set(ARV_PYTHON_VERSION 3 CACHE STRING "Target Python version (e.g. 2 or 3)")
+set(ARV_PYTHON_VERSION 3 CACHE
+  STRING "Target Python version (e.g. 2, 3, 3.3, etc)")
 set(Python_ADDITIONAL_VERSIONS ${ARV_PYTHON_VERSION})
+find_package(PythonInterp)
 
 # Python package
 set(PACKAGE_VERSION "0.1")
@@ -31,3 +33,5 @@ add_subdirectory("${PROJECT_SOURCE_DIR}/tests")
 
 message(STATUS "ARV_PYTHON_VERSION: ${ARV_PYTHON_VERSION}")
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+message(STATUS "Python executable: ${PYTHON_EXECUTABLE}")
+message(STATUS "Python version: ${PYTHON_VERSION_STRING}")
