--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
-include README.rst
+graft 3rd-party
+graft cpp
+graft cython
+graft python
+graft tests
 include COPYING
+include LICENSES
+include README.rst
