--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,9 @@ python:
   - "3.4"
 
 install:
-  - CC=g++-4.8 python setup.py install --user
+  - pip install tox-travis
 
 script:
-  - CC=g++-4.8 python setup.py test
+  - CC=g++-4.8 python2 setup.py test
+  - CC=g++-4.8 python3 setup.py test
+  - tox
