--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ python:
   - "3.4"
 
 install:
-  - pip install tox-travis
+  - pip install tox-travis --user
 
 script:
   - CC=g++-4.8 python2 setup.py test
